--- a/SiphoningStrike/SiphoningStrike.csproj
+++ b/SiphoningStrike/SiphoningStrike.csproj
@@ -44,8 +44,6 @@
     <Compile Include="ByteReader.cs" />
     <Compile Include="ChannelID.cs" />
     <Compile Include="KeyCheckPacket.cs" />
-    <Compile Include="BitReader.cs" />
-    <Compile Include="BitWriter.cs" />
     <Compile Include="ChatPacket.cs" />
     <Compile Include="LoadScreenPacket.cs" />
     <Compile Include="LoadScreen\PKT_100_RequestJoinTeam.cs" />
@@ -262,26 +260,26 @@
     <Compile Include="Game\UnitAddGold.cs" />
     <Compile Include="Game\UnitApplyDamage.cs" />
     <Compile Include="Game\UnitApplyHeal.cs" />
-    <Compile Include="Game\Unused_00.cs" />
-    <Compile Include="Game\Unused_0C.cs" />
-    <Compile Include="Game\Unused_01.cs" />
-    <Compile Include="Game\Unused_8F.cs" />
-    <Compile Include="Game\Unused_50.cs" />
-    <Compile Include="Game\Unused_51.cs" />
-    <Compile Include="Game\Unused_93.cs" />
-    <Compile Include="Game\Unused_97.cs" />
-    <Compile Include="Game\Unused_A1.cs" />
-    <Compile Include="Game\Unused_AE.cs" />
-    <Compile Include="Game\Unused_BE.cs" />
-    <Compile Include="Game\Unused_CF.cs" />
-    <Compile Include="Game\Unused_D0.cs" />
-    <Compile Include="Game\Unused_E6.cs" />
-    <Compile Include="Game\Unused_E7.cs" />
-    <Compile Include="Game\Unused_E8.cs" />
-    <Compile Include="Game\Unused_E9.cs" />
-    <Compile Include="Game\Unused_EA.cs" />
-    <Compile Include="Game\Unused_EB.cs" />
-    <Compile Include="Game\Unused_EC.cs" />
+    <Compile Include="Game\Unused_Dummy.cs" />
+    <Compile Include="Game\Unused_PKT32.cs" />
+    <Compile Include="Game\Unused_SPM_HierarchicalProfilerUpdate.cs" />
+    <Compile Include="Game\Unused_SPM_RemoveListener.cs" />
+    <Compile Include="Game\Unused_SPM_AddMemoryListener.cs" />
+    <Compile Include="Game\Unused_SPM_HierarchicalMemoryUpdate.cs" />
+    <Compile Include="Game\Unused_SPM_RemoveMemoryListener.cs" />
+    <Compile Include="Game\Unused_SPM_AddListener.cs" />
+    <Compile Include="Game\Unused_SPM_RemoveBBProfileListener.cs" />
+    <Compile Include="Game\Unused_SPM_AddBBProfileListener.cs" />
+    <Compile Include="Game\Unused_SPM_HierarchicalBBProfileUpdate.cs" />
+    <Compile Include="Game\Unused_Undefined.cs" />
+    <Compile Include="Game\Unused_SPM_SamplingProfilerUpdate.cs" />
+    <Compile Include="Game\Unused_S2C_AntiBot.cs" />
+    <Compile Include="Game\Unused_S2C_AntiBotWriteLog.cs" />
+    <Compile Include="Game\Unused_S2C_AntiBotKickOut.cs" />
+    <Compile Include="Game\Unused_S2C_AntiBotBanPlayer.cs" />
+    <Compile Include="Game\Unused_S2C_AntiBotTrojan.cs" />
+    <Compile Include="Game\Unused_S2C_AntiBotCloseClient.cs" />
+    <Compile Include="Game\Unused_C2S_AntiBotDP.cs" />
     <Compile Include="Game\Unused_ED.cs" />
     <Compile Include="Game\UpdateGoldRedirectTarget.cs" />
     <Compile Include="Game\UpdateLevelPropS2C.cs" />
