--- a/SiphoningStrike/SiphoningStrike.csproj
+++ b/SiphoningStrike/SiphoningStrike.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Game\World_SendCamera_Server.cs" />
     <Compile Include="Game\World_SendCamera_Server_Acknologment.cs" />
     <Compile Include="Game\World_SendGameNumber.cs" />
+    <Compile Include="Game\Common\ConnectionInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Game\" />
