--- a/SiphoningStrike/SiphoningStrike.csproj
+++ b/SiphoningStrike/SiphoningStrike.csproj
@@ -92,7 +92,7 @@
     <Compile Include="Game\ChangeSlotSpellName.cs" />
     <Compile Include="Game\ChangeSlotSpellOffsetTarget.cs" />
     <Compile Include="Game\ChangeSlotSpellType.cs" />
-    <Compile Include="Game\ClientCheatDetectionSignal.cs" />
+    <Compile Include="Game\Unused_ClientCheatDetectionSignal.cs" />
     <Compile Include="Game\Connected.cs" />
     <Compile Include="Game\DampenerSwitch.cs" />
     <Compile Include="Game\DisplayFloatingText.cs" />
@@ -298,6 +298,7 @@
     <Compile Include="Game\Common\NavFlagCricle.cs" />
     <Compile Include="Game\Common\PlayerLoadInfo.cs" />
     <Compile Include="Game\Common\DeathData.cs" />
+    <Compile Include="Bits.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Game\" />
