--- a/SiphoningStrike/SiphoningStrike.csproj
+++ b/SiphoningStrike/SiphoningStrike.csproj
@@ -331,6 +331,7 @@
     <Compile Include="Game\Events\ArgsBuff.cs" />
     <Compile Include="Game\Events\ArgsDie.cs" />
     <Compile Include="Game\Events\ArgsKillingSpree.cs" />
+    <Compile Include="Game\Common\HeroStat.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
