--- a/SiphoningStrike/SiphoningStrike.csproj
+++ b/SiphoningStrike/SiphoningStrike.csproj
@@ -92,45 +92,45 @@
     <Compile Include="Game\S2C_Connected.cs" />
     <Compile Include="Game\S2C_DampenerSwitch.cs" />
     <Compile Include="Game\S2C_DisplayFloatingText.cs" />
-    <Compile Include="Game\FX_Create_Group.cs" />
+    <Compile Include="Game\S2C_FX_Create_Group.cs" />
     <Compile Include="Game\S2C_FX_Kill.cs" />
-    <Compile Include="Game\GlobalCombatMessage.cs" />
+    <Compile Include="Game\S2C_GlobalCombatMessage.cs" />
     <Compile Include="Game\S2C_HeroReincarnate.cs" />
     <Compile Include="Game\S2C_HeroReincarnateAlive.cs" />
     <Compile Include="Game\S2C_MissileReplication.cs" />
-    <Compile Include="Game\MissileReplication_ChainMissile.cs" />
-    <Compile Include="Game\ModifyShield.cs" />
-    <Compile Include="Game\NPC_BuffAdd2.cs" />
-    <Compile Include="Game\NPC_BuffAddGroup.cs" />
-    <Compile Include="Game\NPC_BuffRemove2.cs" />
-    <Compile Include="Game\NPC_BuffRemoveGroup.cs" />
+    <Compile Include="Game\S2C_MissileReplication_ChainMissile.cs" />
+    <Compile Include="Game\S2C_ModifyShield.cs" />
+    <Compile Include="Game\S2C_NPC_BuffAdd2.cs" />
+    <Compile Include="Game\S2C_NPC_BuffAddGroup.cs" />
+    <Compile Include="Game\S2C_NPC_BuffRemove2.cs" />
+    <Compile Include="Game\S2C_NPC_BuffRemoveGroup.cs" />
     <Compile Include="Game\S2C_NPC_BuffReplace.cs" />
     <Compile Include="Game\S2C_NPC_BuffReplaceGroup.cs" />
     <Compile Include="Game\S2C_NPC_BuffUpdateCount.cs" />
-    <Compile Include="Game\NPC_BuffUpdateCountGroup.cs" />
-    <Compile Include="Game\NPC_CastSpellAns.cs" />
-    <Compile Include="Game\NPC_CastSpellReq.cs" />
-    <Compile Include="Game\NPC_Die.cs" />
+    <Compile Include="Game\S2C_NPC_BuffUpdateCountGroup.cs" />
+    <Compile Include="Game\S2C_NPC_CastSpellAns.cs" />
+    <Compile Include="Game\C2S_NPC_CastSpellReq.cs" />
+    <Compile Include="Game\S2C_NPC_Die.cs" />
     <Compile Include="Game\S2C_NPC_Die_EventHistory.cs" />
     <Compile Include="Game\S2C_NPC_ForceDead.cs" />
     <Compile Include="Game\S2C_NPC_Hero_Die.cs" />
     <Compile Include="Game\S2C_NPC_InstantStop_Attack.cs" />
-    <Compile Include="Game\NPC_IssueOrderReq.cs" />
+    <Compile Include="Game\C2S_NPC_IssueOrderReq.cs" />
     <Compile Include="Game\S2C_NPC_LevelUp.cs" />
     <Compile Include="Game\S2C_NPC_MessageToClient.cs" />
     <Compile Include="Game\S2C_NPC_SetAutocast.cs" />
     <Compile Include="Game\S2C_NPC_UpgradeSpellAns.cs" />
     <Compile Include="Game\C2S_NPC_UpgradeSpellReq.cs" />
-    <Compile Include="Game\OnDisconnected.cs" />
-    <Compile Include="Game\OnEnterLocalVisiblityClient.cs" />
-    <Compile Include="Game\OnEnterVisiblityClient.cs" />
-    <Compile Include="Game\OnEvent.cs" />
+    <Compile Include="Game\UNK_OnDisconnected.cs" />
+    <Compile Include="Game\S2C_OnEnterLocalVisiblityClient.cs" />
+    <Compile Include="Game\S2C_OnEnterVisiblityClient.cs" />
+    <Compile Include="Game\S2C_OnEvent.cs" />
     <Compile Include="Game\S2C_OnLeaveLocalVisiblityClient.cs" />
     <Compile Include="Game\S2C_OnLeaveVisiblityClient.cs" />
-    <Compile Include="Game\OnReplication.cs" />
-    <Compile Include="Game\OnReplication_Acc.cs" />
+    <Compile Include="Game\S2C_OnReplication.cs" />
+    <Compile Include="Game\C2S_OnReplication_Acc.cs" />
     <Compile Include="Game\S2C_Pause.cs" />
-    <Compile Include="Game\PausePacket.cs" />
+    <Compile Include="Game\BID_PausePacket.cs" />
     <Compile Include="Game\S2C_RemoveItemAns.cs" />
     <Compile Include="Game\C2S_RemoveItemReq.cs" />
     <Compile Include="Game\S2C_RemovePerceptionBubble.cs" />
@@ -230,66 +230,66 @@
     <Compile Include="Game\S2C_UnitChangeTeam.cs" />
     <Compile Include="Game\S2C_UnitSetMinimapIcon.cs" />
     <Compile Include="Game\S2C_WriteNavFlags.cs" />
-    <Compile Include="Game\SendSelectedObjID.cs" />
-    <Compile Include="Game\ServerGameSettings.cs" />
+    <Compile Include="Game\C2S_SendSelectedObjID.cs" />
+    <Compile Include="Game\S2C_ServerGameSettings.cs" />
     <Compile Include="Game\S2C_ServerTick.cs" />
     <Compile Include="Game\S2C_SetFadeOut_Pop.cs" />
-    <Compile Include="Game\SetFadeOut_Push.cs" />
+    <Compile Include="Game\S2C_SetFadeOut_Push.cs" />
     <Compile Include="Game\S2C_SetFrequency.cs" />
     <Compile Include="Game\S2C_SetItem.cs" />
-    <Compile Include="Game\SpawnBotS2C.cs" />
-    <Compile Include="Game\SpawnLevelPropS2C.cs" />
-    <Compile Include="Game\SpawnMinionS2C.cs" />
+    <Compile Include="Game\S2C_SpawnBot.cs" />
+    <Compile Include="Game\S2C_SpawnLevelProp.cs" />
+    <Compile Include="Game\S2C_SpawnMinion.cs" />
     <Compile Include="Game\S2C_SwapItemAns.cs" />
     <Compile Include="Game\C2S_SwapItemReq.cs" />
-    <Compile Include="Game\SyncMissionStartTimeS2C.cs" />
-    <Compile Include="Game\SyncSimTimeFinalS2C.cs" />
+    <Compile Include="Game\S2C_SyncMissionStartTime.cs" />
+    <Compile Include="Game\S2C_SyncSimTimeFinal.cs" />
     <Compile Include="Game\C2S_SynchSimTime.cs" />
-    <Compile Include="Game\SynchSimTimeS2C.cs" />
-    <Compile Include="Game\SynchVersionC2S.cs" />
+    <Compile Include="Game\S2C_SynchSimTime.cs" />
+    <Compile Include="Game\C2S_SynchVersion.cs" />
     <Compile Include="Game\S2C_SynchVersion.cs" />
     <Compile Include="Game\UNK_Turret_CreateTurret.cs" />
-    <Compile Include="Game\Turret_Fire.cs" />
+    <Compile Include="Game\UNK_Turret_Fire.cs" />
     <Compile Include="Game\S2C_UnitAddEXP.cs" />
     <Compile Include="Game\S2C_UnitAddGold.cs" />
     <Compile Include="Game\S2C_UnitApplyDamage.cs" />
-    <Compile Include="Game\UnitApplyHeal.cs" />
-    <Compile Include="Game\Unused_C2S_AntiBotDP.cs" />
-    <Compile Include="Game\Unused_ClientCheatDetectionSignal.cs" />
+    <Compile Include="Game\S2C_UnitApplyHeal.cs" />
+    <Compile Include="Game\C2S_AntiBotDP.cs" />
+    <Compile Include="Game\C2S_ClientCheatDetectionSignal.cs" />
     <Compile Include="Game\BID_Dummy.cs" />
-    <Compile Include="Game\Unused_ED.cs" />
+    <Compile Include="Game\C2S_AntiBot.cs" />
     <Compile Include="Game\UNK_Unused_0C.cs" />
-    <Compile Include="Game\Unused_S2C_AntiBot.cs" />
-    <Compile Include="Game\Unused_S2C_AntiBotBanPlayer.cs" />
-    <Compile Include="Game\Unused_S2C_AntiBotCloseClient.cs" />
-    <Compile Include="Game\Unused_S2C_AntiBotKickOut.cs" />
-    <Compile Include="Game\Unused_S2C_AntiBotTrojan.cs" />
-    <Compile Include="Game\Unused_S2C_AntiBotWriteLog.cs" />
-    <Compile Include="Game\Unused_SPM_AddBBProfileListener.cs" />
-    <Compile Include="Game\Unused_SPM_AddListener.cs" />
+    <Compile Include="Game\S2C_AntiBot.cs" />
+    <Compile Include="Game\S2C_AntiBotBanPlayer.cs" />
+    <Compile Include="Game\S2C_AntiBotCloseClient.cs" />
+    <Compile Include="Game\S2C_AntiBotKickOut.cs" />
+    <Compile Include="Game\S2C_AntiBotTrojan.cs" />
+    <Compile Include="Game\S2C_AntiBotWriteLog.cs" />
+    <Compile Include="Game\C2S_SPM_AddBBProfileListener.cs" />
+    <Compile Include="Game\C2S_SPM_AddListener.cs" />
     <Compile Include="Game\C2S_SPM_AddMemoryListener.cs" />
-    <Compile Include="Game\Unused_SPM_HierarchicalBBProfileUpdate.cs" />
+    <Compile Include="Game\S2C_SPM_HierarchicalBBProfileUpdate.cs" />
     <Compile Include="Game\S2C_SPM_HierarchicalMemoryUpdate.cs" />
     <Compile Include="Game\S2C_SPM_HierarchicalProfilerUpdate.cs" />
-    <Compile Include="Game\Unused_SPM_RemoveBBProfileListener.cs" />
-    <Compile Include="Game\Unused_SPM_RemoveListener.cs" />
-    <Compile Include="Game\Unused_SPM_RemoveMemoryListener.cs" />
-    <Compile Include="Game\Unused_SPM_SamplingProfilerUpdate.cs" />
-    <Compile Include="Game\Unused_Undefined.cs" />
+    <Compile Include="Game\C2S_SPM_RemoveBBProfileListener.cs" />
+    <Compile Include="Game\C2S_SPM_RemoveListener.cs" />
+    <Compile Include="Game\C2S_SPM_RemoveMemoryListener.cs" />
+    <Compile Include="Game\S2C_SPM_SamplingProfilerUpdate.cs" />
+    <Compile Include="Game\UNK_Undefined.cs" />
     <Compile Include="Game\S2C_UpdateGoldRedirectTarget.cs" />
-    <Compile Include="Game\UpdateLevelPropS2C.cs" />
-    <Compile Include="Game\UseItemAns.cs" />
+    <Compile Include="Game\S2C_UpdateLevelProp.cs" />
+    <Compile Include="Game\S2C_UseItemAns.cs" />
     <Compile Include="Game\C2S_UseObject.cs" />
     <Compile Include="Game\UNK_UserMessagesStart.cs" />
     <Compile Include="Game\S2C_WaypointGroup.cs" />
     <Compile Include="Game\S2C_WaypointGroupWithSpeed.cs" />
-    <Compile Include="Game\WaypointList.cs" />
-    <Compile Include="Game\WaypointListHeroWithSpeed.cs" />
-    <Compile Include="Game\Waypoint_Acc.cs" />
-    <Compile Include="Game\World_LockCamera_Server.cs" />
+    <Compile Include="Game\S2C_WaypointList.cs" />
+    <Compile Include="Game\S2C_WaypointListHeroWithSpeed.cs" />
+    <Compile Include="Game\C2S_Waypoint_Acc.cs" />
+    <Compile Include="Game\C2S_World_LockCamera_Server.cs" />
     <Compile Include="Game\C2S_World_SendCamera_Server.cs" />
     <Compile Include="Game\S2C_World_SendCamera_Server_Ack.cs" />
-    <Compile Include="Game\World_SendGameNumber.cs" />
+    <Compile Include="Game\S2C_World_SendGameNumber.cs" />
     <Compile Include="Game\Common\BasicAttackData.cs" />
     <Compile Include="Game\Common\Color.cs" />
     <Compile Include="Game\Common\ConnectionInfo.cs" />
