--- a/SiphoningStrike/SiphoningStrike.csproj
+++ b/SiphoningStrike/SiphoningStrike.csproj
@@ -1,339 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0C68D4DB-45BD-4069-9CB4-7FC41EE48313}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>SiphoningStrike</RootNamespace>
-    <AssemblyName>SiphoningStrike</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BasePacket.cs" />
-    <Compile Include="BatchGamePacket.cs" />
-    <Compile Include="ByteReader.cs" />
-    <Compile Include="ByteWriter.cs" />
-    <Compile Include="ChannelID.cs" />
-    <Compile Include="ChatPacket.cs" />
-    <Compile Include="GamePacket.cs" />
-    <Compile Include="GamePacketID.cs" />
-    <Compile Include="IUnusedPacket.cs" />
-    <Compile Include="KeyCheckPacket.cs" />
-    <Compile Include="LoadScreenPacket.cs" />
-    <Compile Include="LoadScreenPacketID.cs" />
-    <Compile Include="UnknownPacket.cs" />
-    <Compile Include="Game\C2S_AI_Command.cs" />
-    <Compile Include="Game\S2C_AI_TargetHero.cs" />
-    <Compile Include="Game\S2C_AI_Target.cs" />
-    <Compile Include="Game\S2C_AddPosPerceptionBubble.cs" />
-    <Compile Include="Game\S2C_AddUnitPerceptionBubble.cs" />
-    <Compile Include="Game\S2C_AttachFlexParticle.cs" />
-    <Compile Include="Game\S2C_AvatarInfo_Server.cs" />
-    <Compile Include="Game\S2C_Barrack_SpawnUnit.cs" />
-    <Compile Include="Game\S2C_Basic_Attack.cs" />
-    <Compile Include="Game\S2C_Basic_Attack_Pos.cs" />
-    <Compile Include="Game\S2C_Building_Die.cs" />
-    <Compile Include="Game\S2C_BuyItemAns.cs" />
-    <Compile Include="Game\C2S_BuyItemReq.cs" />
-    <Compile Include="Game\C2S_CharSelected.cs" />
-    <Compile Include="Game\C2S_ClientConnect_NamedPipe.cs" />
-    <Compile Include="Game\C2S_ClientFinished.cs" />
-    <Compile Include="Game\C2S_ClientReady.cs" />
-    <Compile Include="Game\C2S_Exit.cs" />
-    <Compile Include="Game\C2S_MapPing.cs" />
-    <Compile Include="Game\C2S_OnQuestEvent.cs" />
-    <Compile Include="Game\C2S_OnRespawnPointEvent.cs" />
-    <Compile Include="Game\C2S_OnScoreBoardOpened.cs" />
-    <Compile Include="Game\C2S_OnShopOpened.cs" />
-    <Compile Include="Game\C2S_OnTipEvent.cs" />
-    <Compile Include="Game\C2S_OnTutorialPopupClosed.cs" />
-    <Compile Include="Game\C2S_Ping_Load_Info.cs" />
-    <Compile Include="Game\C2S_PlayEmote.cs" />
-    <Compile Include="Game\C2S_QueryStatusReq.cs" />
-    <Compile Include="Game\C2S_Reconnect.cs" />
-    <Compile Include="Game\C2S_StatsUpdateReq.cs" />
-    <Compile Include="Game\C2S_TeamSurrenderVote.cs" />
-    <Compile Include="Game\C2S_TutorialAudioEventFinished.cs" />
-    <Compile Include="Game\C2S_WriteNavFlags_Acc.cs" />
-    <Compile Include="Game\S2C_CHAR_CancelTargetingReticle.cs" />
-    <Compile Include="Game\S2C_CHAR_SetCooldown.cs" />
-    <Compile Include="Game\S2C_CHAR_SpawnPet.cs" />
-    <Compile Include="Game\UNK_CHAT.cs" />
-    <Compile Include="Game\S2C_ChangePARColorOverride.cs" />
-    <Compile Include="Game\S2C_ChangeSlotSpellIcon.cs" />
-    <Compile Include="Game\S2C_ChangeSlotSpellName.cs" />
-    <Compile Include="Game\S2C_ChangeSlotSpellOffsetTarget.cs" />
-    <Compile Include="Game\S2C_ChangeSlotSpellType.cs" />
-    <Compile Include="Game\S2C_Connected.cs" />
-    <Compile Include="Game\S2C_DampenerSwitch.cs" />
-    <Compile Include="Game\S2C_DisplayFloatingText.cs" />
-    <Compile Include="Game\S2C_FX_Create_Group.cs" />
-    <Compile Include="Game\S2C_FX_Kill.cs" />
-    <Compile Include="Game\S2C_GlobalCombatMessage.cs" />
-    <Compile Include="Game\S2C_HeroReincarnate.cs" />
-    <Compile Include="Game\S2C_HeroReincarnateAlive.cs" />
-    <Compile Include="Game\S2C_MissileReplication.cs" />
-    <Compile Include="Game\S2C_MissileReplication_ChainMissile.cs" />
-    <Compile Include="Game\S2C_ModifyShield.cs" />
-    <Compile Include="Game\S2C_NPC_BuffAdd2.cs" />
-    <Compile Include="Game\S2C_NPC_BuffAddGroup.cs" />
-    <Compile Include="Game\S2C_NPC_BuffRemove2.cs" />
-    <Compile Include="Game\S2C_NPC_BuffRemoveGroup.cs" />
-    <Compile Include="Game\S2C_NPC_BuffReplace.cs" />
-    <Compile Include="Game\S2C_NPC_BuffReplaceGroup.cs" />
-    <Compile Include="Game\S2C_NPC_BuffUpdateCount.cs" />
-    <Compile Include="Game\S2C_NPC_BuffUpdateCountGroup.cs" />
-    <Compile Include="Game\S2C_NPC_CastSpellAns.cs" />
-    <Compile Include="Game\C2S_NPC_CastSpellReq.cs" />
-    <Compile Include="Game\S2C_NPC_Die.cs" />
-    <Compile Include="Game\S2C_NPC_Die_EventHistory.cs" />
-    <Compile Include="Game\S2C_NPC_ForceDead.cs" />
-    <Compile Include="Game\S2C_NPC_Hero_Die.cs" />
-    <Compile Include="Game\S2C_NPC_InstantStop_Attack.cs" />
-    <Compile Include="Game\C2S_NPC_IssueOrderReq.cs" />
-    <Compile Include="Game\S2C_NPC_LevelUp.cs" />
-    <Compile Include="Game\S2C_NPC_MessageToClient.cs" />
-    <Compile Include="Game\S2C_NPC_SetAutocast.cs" />
-    <Compile Include="Game\S2C_NPC_UpgradeSpellAns.cs" />
-    <Compile Include="Game\C2S_NPC_UpgradeSpellReq.cs" />
-    <Compile Include="Game\UNK_OnDisconnected.cs" />
-    <Compile Include="Game\S2C_OnEnterLocalVisiblityClient.cs" />
-    <Compile Include="Game\S2C_OnEnterVisiblityClient.cs" />
-    <Compile Include="Game\S2C_OnEvent.cs" />
-    <Compile Include="Game\S2C_OnLeaveLocalVisiblityClient.cs" />
-    <Compile Include="Game\S2C_OnLeaveVisiblityClient.cs" />
-    <Compile Include="Game\S2C_OnReplication.cs" />
-    <Compile Include="Game\C2S_OnReplication_Acc.cs" />
-    <Compile Include="Game\S2C_Pause.cs" />
-    <Compile Include="Game\BID_PausePacket.cs" />
-    <Compile Include="Game\S2C_RemoveItemAns.cs" />
-    <Compile Include="Game\C2S_RemoveItemReq.cs" />
-    <Compile Include="Game\S2C_RemovePerceptionBubble.cs" />
-    <Compile Include="Game\S2C_ReplayOnly_GoldEarned.cs" />
-    <Compile Include="Game\S2C_ResetForSlowLoader.cs" />
-    <Compile Include="Game\BID_ResumePacket.cs" />
-    <Compile Include="Game\S2C_AI_State.cs" />
-    <Compile Include="Game\S2C_AI_TargetSelection.cs" />
-    <Compile Include="Game\S2C_AddDebugCircle.cs" />
-    <Compile Include="Game\S2C_AnimatedBuildingSetCurrentSkin.cs" />
-    <Compile Include="Game\S2C_BotAI.cs" />
-    <Compile Include="Game\S2C_CameraBehavior.cs" />
-    <Compile Include="Game\S2C_ChainMissileSync.cs" />
-    <Compile Include="Game\S2C_ChangeCharacterData.cs" />
-    <Compile Include="Game\S2C_ChangeCharacterVoice.cs" />
-    <Compile Include="Game\S2C_CloseShop.cs" />
-    <Compile Include="Game\S2C_ColorRemapFX.cs" />
-    <Compile Include="Game\S2C_CreateHero.cs" />
-    <Compile Include="Game\S2C_CreateNeutral.cs" />
-    <Compile Include="Game\S2C_CreateTurret.cs" />
-    <Compile Include="Game\S2C_CreateUnitHighlight.cs" />
-    <Compile Include="Game\S2C_DestroyClientMissile.cs" />
-    <Compile Include="Game\S2C_DisableHUDForEndOfGame.cs" />
-    <Compile Include="Game\S2C_DisplayLocalizedTutorialChatText.cs" />
-    <Compile Include="Game\S2C_EndGame.cs" />
-    <Compile Include="Game\S2C_EndOfGameEvent.cs" />
-    <Compile Include="Game\S2C_EndSpawn.cs" />
-    <Compile Include="Game\S2C_Exit.cs" />
-    <Compile Include="Game\S2C_FX_OnEnterTeamVisiblity.cs" />
-    <Compile Include="Game\S2C_FX_OnLeaveTeamVisiblity.cs" />
-    <Compile Include="Game\S2C_FaceDirection.cs" />
-    <Compile Include="Game\S2C_FadeMinions.cs" />
-    <Compile Include="Game\S2C_FadeOutMainSFX.cs" />
-    <Compile Include="Game\S2C_HandleCapturePointUpdate.cs" />
-    <Compile Include="Game\S2C_HandleGameScore.cs" />
-    <Compile Include="Game\S2C_HandleQuestUpdate.cs" />
-    <Compile Include="Game\S2C_HandleRespawnPointUpdate.cs" />
-    <Compile Include="Game\S2C_HandleTipUpdate.cs" />
-    <Compile Include="Game\S2C_HandleUIHighlight.cs" />
-    <Compile Include="Game\S2C_HeroStats.cs" />
-    <Compile Include="Game\S2C_HideAuxiliaryText.cs" />
-    <Compile Include="Game\S2C_HideObjectiveText.cs" />
-    <Compile Include="Game\S2C_HighlightHUDElement.cs" />
-    <Compile Include="Game\S2C_HighlightShopElement.cs" />
-    <Compile Include="Game\S2C_HighlightTitanBarElement.cs" />
-    <Compile Include="Game\S2C_IncrementPlayerScore.cs" />
-    <Compile Include="Game\S2C_IncrementPlayerStat.cs" />
-    <Compile Include="Game\S2C_LevelUpSpell.cs" />
-    <Compile Include="Game\S2C_LineMissileHitList.cs" />
-    <Compile Include="Game\S2C_LockCamera.cs" />
-    <Compile Include="Game\S2C_MapPing.cs" />
-    <Compile Include="Game\S2C_ModifyDebugCircleColor.cs" />
-    <Compile Include="Game\S2C_ModifyDebugCircleRadius.cs" />
-    <Compile Include="Game\S2C_MoveCameraToPoint.cs" />
-    <Compile Include="Game\S2C_MusicCueCommand.cs" />
-    <Compile Include="Game\S2C_MuteVolumeCategory.cs" />
-    <Compile Include="Game\S2C_Neutral_Camp_Empty.cs" />
-    <Compile Include="Game\S2C_OnEnterTeamVisiblity.cs" />
-    <Compile Include="Game\S2C_OnEventWorld.cs" />
-    <Compile Include="Game\S2C_OnLeaveTeamVisiblity.cs" />
-    <Compile Include="Game\S2C_OpenAFKWarningMessage.cs" />
-    <Compile Include="Game\S2C_OpenTutorialPopup.cs" />
-    <Compile Include="Game\S2C_PauseAnimation.cs" />
-    <Compile Include="Game\S2C_Ping_Load_Info.cs" />
-    <Compile Include="Game\S2C_PlayAnimation.cs" />
-    <Compile Include="Game\S2C_PlayEmote.cs" />
-    <Compile Include="Game\S2C_PlayVOAudioEvent.cs" />
-    <Compile Include="Game\S2C_PopAllCharacterData.cs" />
-    <Compile Include="Game\S2C_PopCharacterData.cs" />
-    <Compile Include="Game\S2C_QueryStatusAns.cs" />
-    <Compile Include="Game\S2C_Reconnect.cs" />
-    <Compile Include="Game\S2C_Reconnect_Done.cs" />
-    <Compile Include="Game\S2C_RefreshAuxiliaryText.cs" />
-    <Compile Include="Game\S2C_RefreshObjectiveText.cs" />
-    <Compile Include="Game\S2C_RemoveDebugCircle.cs" />
-    <Compile Include="Game\S2C_RemoveUnitHighlight.cs" />
-    <Compile Include="Game\S2C_SetAnimStates.cs" />
-    <Compile Include="Game\S2C_SetCircularMovementRestriction.cs" />
-    <Compile Include="Game\S2C_SetFoWStatus.cs" />
-    <Compile Include="Game\S2C_SetGreyscaleEnabledWhenDead.cs" />
-    <Compile Include="Game\S2C_SetInputLockingFlag.cs" />
-    <Compile Include="Game\S2C_SetSpellData.cs" />
-    <Compile Include="Game\S2C_ShowAuxiliaryText.cs" />
-    <Compile Include="Game\S2C_ShowHealthBar.cs" />
-    <Compile Include="Game\S2C_ShowObjectiveText.cs" />
-    <Compile Include="Game\S2C_StartGame.cs" />
-    <Compile Include="Game\S2C_StartSpawn.cs" />
-    <Compile Include="Game\S2C_StopAnimation.cs" />
-    <Compile Include="Game\S2C_SwitchNexusesToOnIdleParticles.cs" />
-    <Compile Include="Game\S2C_TeamSurrenderCountDown.cs" />
-    <Compile Include="Game\S2C_TeamSurrenderStatus.cs" />
-    <Compile Include="Game\S2C_TeamSurrenderVote.cs" />
-    <Compile Include="Game\S2C_ToggleFoW.cs" />
-    <Compile Include="Game\S2C_ToggleInputLockingFlag.cs" />
-    <Compile Include="Game\S2C_ToggleUIHighlight.cs" />
-    <Compile Include="Game\S2C_ToolTipVars.cs" />
-    <Compile Include="Game\S2C_UnitChangeTeam.cs" />
-    <Compile Include="Game\S2C_UnitSetMinimapIcon.cs" />
-    <Compile Include="Game\S2C_WriteNavFlags.cs" />
-    <Compile Include="Game\C2S_SendSelectedObjID.cs" />
-    <Compile Include="Game\S2C_ServerGameSettings.cs" />
-    <Compile Include="Game\S2C_ServerTick.cs" />
-    <Compile Include="Game\S2C_SetFadeOut_Pop.cs" />
-    <Compile Include="Game\S2C_SetFadeOut_Push.cs" />
-    <Compile Include="Game\S2C_SetFrequency.cs" />
-    <Compile Include="Game\S2C_SetItem.cs" />
-    <Compile Include="Game\S2C_SpawnBot.cs" />
-    <Compile Include="Game\S2C_SpawnLevelProp.cs" />
-    <Compile Include="Game\S2C_SpawnMinion.cs" />
-    <Compile Include="Game\S2C_SwapItemAns.cs" />
-    <Compile Include="Game\C2S_SwapItemReq.cs" />
-    <Compile Include="Game\S2C_SyncMissionStartTime.cs" />
-    <Compile Include="Game\S2C_SyncSimTimeFinal.cs" />
-    <Compile Include="Game\C2S_SynchSimTime.cs" />
-    <Compile Include="Game\S2C_SynchSimTime.cs" />
-    <Compile Include="Game\C2S_SynchVersion.cs" />
-    <Compile Include="Game\S2C_SynchVersion.cs" />
-    <Compile Include="Game\UNK_Turret_CreateTurret.cs" />
-    <Compile Include="Game\UNK_Turret_Fire.cs" />
-    <Compile Include="Game\S2C_UnitAddEXP.cs" />
-    <Compile Include="Game\S2C_UnitAddGold.cs" />
-    <Compile Include="Game\S2C_UnitApplyDamage.cs" />
-    <Compile Include="Game\S2C_UnitApplyHeal.cs" />
-    <Compile Include="Game\C2S_AntiBotDP.cs" />
-    <Compile Include="Game\C2S_ClientCheatDetectionSignal.cs" />
-    <Compile Include="Game\BID_Dummy.cs" />
-    <Compile Include="Game\C2S_AntiBot.cs" />
-    <Compile Include="Game\UNK_Unused_0C.cs" />
-    <Compile Include="Game\S2C_AntiBot.cs" />
-    <Compile Include="Game\S2C_AntiBotBanPlayer.cs" />
-    <Compile Include="Game\S2C_AntiBotCloseClient.cs" />
-    <Compile Include="Game\S2C_AntiBotKickOut.cs" />
-    <Compile Include="Game\S2C_AntiBotTrojan.cs" />
-    <Compile Include="Game\S2C_AntiBotWriteLog.cs" />
-    <Compile Include="Game\C2S_SPM_AddBBProfileListener.cs" />
-    <Compile Include="Game\C2S_SPM_AddListener.cs" />
-    <Compile Include="Game\C2S_SPM_AddMemoryListener.cs" />
-    <Compile Include="Game\S2C_SPM_HierarchicalBBProfileUpdate.cs" />
-    <Compile Include="Game\S2C_SPM_HierarchicalMemoryUpdate.cs" />
-    <Compile Include="Game\S2C_SPM_HierarchicalProfilerUpdate.cs" />
-    <Compile Include="Game\C2S_SPM_RemoveBBProfileListener.cs" />
-    <Compile Include="Game\C2S_SPM_RemoveListener.cs" />
-    <Compile Include="Game\C2S_SPM_RemoveMemoryListener.cs" />
-    <Compile Include="Game\S2C_SPM_SamplingProfilerUpdate.cs" />
-    <Compile Include="Game\UNK_Undefined.cs" />
-    <Compile Include="Game\S2C_UpdateGoldRedirectTarget.cs" />
-    <Compile Include="Game\S2C_UpdateLevelProp.cs" />
-    <Compile Include="Game\S2C_UseItemAns.cs" />
-    <Compile Include="Game\C2S_UseObject.cs" />
-    <Compile Include="Game\UNK_UserMessagesStart.cs" />
-    <Compile Include="Game\S2C_WaypointGroup.cs" />
-    <Compile Include="Game\S2C_WaypointGroupWithSpeed.cs" />
-    <Compile Include="Game\S2C_WaypointList.cs" />
-    <Compile Include="Game\S2C_WaypointListHeroWithSpeed.cs" />
-    <Compile Include="Game\C2S_Waypoint_Acc.cs" />
-    <Compile Include="Game\C2S_World_LockCamera_Server.cs" />
-    <Compile Include="Game\C2S_World_SendCamera_Server.cs" />
-    <Compile Include="Game\S2C_World_SendCamera_Server_Ack.cs" />
-    <Compile Include="Game\S2C_World_SendGameNumber.cs" />
-    <Compile Include="Game\Common\BasicAttackData.cs" />
-    <Compile Include="Game\Common\Color.cs" />
-    <Compile Include="Game\Common\ConnectionInfo.cs" />
-    <Compile Include="Game\Common\DeathData.cs" />
-    <Compile Include="Game\Common\NavFlagCricle.cs" />
-    <Compile Include="Game\Common\PlayerLoadInfo.cs" />
-    <Compile Include="Game\Common\Talent.cs" />
-    <Compile Include="LoadScreen\PKT_100_RequestJoinTeam.cs" />
-    <Compile Include="LoadScreen\PKT_101_RequestReskin.cs" />
-    <Compile Include="LoadScreen\PKT_102_RequestRename.cs" />
-    <Compile Include="LoadScreen\PKT_103_TeamRosterUpdate.cs" />
-    <Compile Include="Game\Common\TooltipVars.cs" />
-    <Compile Include="Game\Common\CastInfo.cs" />
-    <Compile Include="Game\Common\BuffAddGroupEntry.cs" />
-    <Compile Include="Game\Common\BuffRemoveGroupEntry.cs" />
-    <Compile Include="Game\Common\BuffUpdateCountGroupEntry.cs" />
-    <Compile Include="Game\Common\BuffReplaceGroupEntry.cs" />
-    <Compile Include="Game\Common\UpdateLevelPropData.cs" />
-    <Compile Include="Game\Common\FXCreateGroupEntry.cs" />
-    <Compile Include="Game\Common\FXCreateGroupItem.cs" />
-    <Compile Include="Game\Common\CompressedWaypoint.cs" />
-    <Compile Include="Game\Common\MovementData.cs" />
-    <Compile Include="Game\Common\SpeedParams.cs" />
-    <Compile Include="Game\Common\ReplicationData.cs" />
-    <Compile Include="Game\Events\ArgsAlert.cs" />
-    <Compile Include="Game\Events\ArgsAssist.cs" />
-    <Compile Include="Game\Events\ArgsBase.cs" />
-    <Compile Include="Game\Events\ArgsCapturePoint.cs" />
-    <Compile Include="Game\Events\ArgsDamage.cs" />
-    <Compile Include="Game\Events\ArgsDamageCriticalStrike.cs" />
-    <Compile Include="Game\Events\ArgsGoldEarned.cs" />
-    <Compile Include="Game\Events\ArgsGoldSpent.cs" />
-    <Compile Include="Game\Events\ArgsHeal.cs" />
-    <Compile Include="Game\Events\ArgsItemConsumedPurchased.cs" />
-    <Compile Include="Game\Events\ArgsSurrenderRemainingTime.cs" />
-    <Compile Include="Game\Events\ArgsSurrenderVotes.cs" />
-    <Compile Include="Game\Events\EventID.cs" />
-    <Compile Include="Game\Events\Events.cs" />
-    <Compile Include="Game\Events\Event.cs" />
-    <Compile Include="Game\Events\ArgsBuff.cs" />
-    <Compile Include="Game\Events\ArgsDie.cs" />
-    <Compile Include="Game\Events\ArgsKillingSpree.cs" />
-    <Compile Include="Game\Common\HeroStat.cs" />
-    <Compile Include="Utility.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
